Overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   background-color: black;
   color:white;
   margin:0;
-  /*overflow-y:hidden;*/
+  overflow-y:hidden;
 }
 
 #siteTitle {
